    whether "terse" is set in DEB_BUILD_OPTIONS.

  [ Niels Thykier ]
  * dh_gconf: Mark dh_gconf as deprecated (see #908845).
  * Dh_Lib.pm: Separate lowest non-deprecated compat level and
    the lowest compat level we generate "debhelper-compat (= X)"
    relations for.
  * Dh_Lib.pm: Open compat level 13 as an experimental compat
    level.

 -- Niels Thykier <niels@thykier.net>  Sat, 03 Nov 2018 08:02:02 +0000

debhelper (11.5.1) unstable; urgency=medium

  * dh_systemd_start: Fix bug introduced in debhelper/11.5 where
    dh_systemd_start would fail to substitute a token in the
    generated maintscript for maintainer scripts when using
    "--restart-after-upgrade" (including when the option is
    on by default).  Thanks to Colin Watson for reporting the
    bug.  (Closes: #912420)

 -- Niels Thykier <niels@thykier.net>  Wed, 31 Oct 2018 21:02:00 +0000

debhelper (11.5) unstable; urgency=medium

  [ Daniele Nicolodi ]
  * dh_installsystemduser: New helper responsible for istalling package
    maintainer supplied systemd user instance units and to produce
    postinst and postrm maintiner scripts code blocks to appropriately
    enable, mask and disable units when the package is installed,
    upgraded, or removed.  (Closes: #764678)

  [ Niels Thykier ]
  * dh_installsystemd.1: Improve the documentation for --name to make
    it more clear that it also changes the name of the source files in
    the debian directory.  Thanks to Emel Hasdal for reporting the
    issue and reviewing the change.  (Closes: #899983)

 -- Niels Thykier <niels@thykier.net>  Sun, 28 Oct 2018 16:07:01 +0000

debhelper (11.4.1) unstable; urgency=medium

  [ Niels Thykier ]
  * debhelper.pod: Quote the value of INSTALL in description of
    compat level 11.  Thanks to Josh Triplett for the suggestion
    (Closes: #908906)
  * d/changelog: Fix typos in old entries.
  * dh_strip: Remove empty /usr/lib/debug directories left over