@@ -11,6 +11,9 @@ debhelper (11.5.2) UNRELEASED; urgency=medium
     relations for.
   * Dh_Lib.pm: Open compat level 13 as an experimental compat
     level.
+  * meson.pm: In compat 13, run tests with "meson test" rather
+    than "ninja test".  Thanks to Simon McVittie for the
+    suggestion.  (Closes: #912560)
 
  -- Niels Thykier <niels@thykier.net>  Sat, 03 Nov 2018 08:02:02 +0000
 
